[v2.0.0-beta1] Add interactive legend, key metrics layout with rows, chart swipe gestures

--- a/index.html
+++ b/index.html
@@ -251,7 +251,9 @@
                     <!-- Key Metrics Grid -->
                     <div class="card metrics-overview metrics-key">
                         <h3>Key Metrics</h3>
-                        <div class="metrics-grid-compact">
+                        <!-- Row 1: Valuation & Growth -->
+                        <div class="metrics-row-header">Valuation & Growth</div>
+                        <div class="metrics-grid-compact metrics-row">
                             <div class="metric" data-trend="neutral" title="What you're paying for each dollar of earnings. Compare to industry peers and historical averages to gauge if the stock is cheap or expensive.">
                                 <span class="metric-label">P/E Ratio</span>
                                 <div class="metric-value-row">
@@ -289,6 +291,14 @@
                                     <span class="metric-trend"></span>
                                 </div>
                             </div>
+                        </div>
+                        
+                        <!-- Visual Divider -->
+                        <div class="metrics-row-divider"></div>
+                        
+                        <!-- Row 2: Profitability -->
+                        <div class="metrics-row-header">Profitability</div>
+                        <div class="metrics-grid-compact metrics-row">
                             <div class="metric" data-trend="neutral" title="How effectively management converts shareholder capital into profits. Consistently high ROE (15%+) often signals a durable competitive advantage.">
                                 <span class="metric-label">Return on Equity</span>
                                 <div class="metric-value-container">
