--- a/static/index.html
+++ b/static/index.html
@@ -28,6 +28,7 @@
                         <div class="input-underline"></div>
                         <div class="input-underline-focus"></div>
                     </div>
+                    <div id="debugStatus" style="position:fixed; bottom:10px; right:10px; background:rgba(0,0,0,0.8); color:#0f0; padding:8px 12px; border-radius:4px; font-size:12px; font-family:monospace; z-index:9999; max-width:80vw; display:none;"></div>
                     <div id="searchSuggestions" class="suggestions hidden"></div>
                 </div>
                 <button type="submit" id="searchBtn">
