--- a/static/index.html
+++ b/static/index.html
@@ -475,7 +475,7 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="app.js?v=2"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js" onerror="console.warn('Chart.js CDN failed')"></script>
+    <script src="app.js?v=3"></script>
 </body>
 </html>
