[v2.0.0] Remove debug code, fix version to 2.0.0, clean up search

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <div class="header-content">
                 <h1>🦞 Stock Research</h1>
-                <span id="version" class="version">v2.0.0-beta1</span>
+                <span id="version" class="version">v2.0.0</span>
             </div>
             <form id="searchForm">
                 <div class="search-container">
@@ -28,7 +28,6 @@
                         <div class="input-underline"></div>
                         <div class="input-underline-focus"></div>
                     </div>
-                    <div id="debugStatus" style="position:fixed; bottom:10px; right:10px; background:rgba(0,0,0,0.8); color:#0f0; padding:8px 12px; border-radius:4px; font-size:12px; font-family:monospace; z-index:9999; max-width:80vw; display:none;"></div>
                     <div id="searchSuggestions" class="suggestions hidden"></div>
                 </div>
                 <button type="submit" id="searchBtn">
@@ -475,25 +474,7 @@
         </div>
     </div>
 
-    <script>
-        // Immediate test - runs before app.js
-        document.addEventListener('DOMContentLoaded', function() {
-            var debug = document.getElementById('debugStatus');
-            if (debug) {
-                debug.style.display = 'block';
-                debug.textContent = 'JS starting...';
-            }
-        });
-        
-        // Catch any errors
-        window.onerror = function(msg, url, line) {
-            var debug = document.getElementById('debugStatus');
-            if (debug) {
-                debug.textContent = 'ERROR: ' + msg + ' (line ' + line + ')';
-            }
-        };
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js" onerror="console.warn('Chart.js CDN failed')"></script>
-    <script src="app.js?v=5" onerror="document.getElementById('debugStatus').textContent='ERROR: app.js failed to load'"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
+    <script src="app.js?v=6"></script>
 </body>
 </html>
