[v2.0.0] Add current price and percent change to header

--- a/index.html
+++ b/index.html
@@ -211,6 +211,10 @@
                             <h2 id="companyName"></h2>
                             <span id="companyTicker" class="ticker"></span>
                         </div>
+                        <div class="company-price">
+                            <span id="headerPrice" class="header-price"></span>
+                            <span id="headerChange" class="header-change"></span>
+                        </div>
                         <button id="refreshBtn" class="refresh-btn" title="Refresh data">
                             <span class="refresh-icon">↻</span>
                             <span class="refresh-text">Refresh</span>
