[v2.0.0] Add Shelby Easter egg - search for SHELBY to see it!

--- a/index.html
+++ b/index.html
@@ -478,7 +478,15 @@
         </div>
     </div>
 
+    <!-- Shelby Easter Egg -->
+    <div id="shelbyOverlay" class="shelby-overlay hidden">
+        <canvas id="shelbyCanvas" class="shelby-canvas"></canvas>
+        <div id="shelbyMessage" class="shelby-message">I love you Shelby</div>
+        <div class="shelby-hearts" id="shelbyHearts"></div>
+        <div class="shelby-hint">Tap anywhere to continue</div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
-    <script src="app.js?v=6"></script>
+    <script src="app.js?v=7"></script>
 </body>
 </html>
