--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
     <!-- Shelby Easter Egg -->
     <div id="shelbyOverlay" class="shelby-overlay hidden">
         <canvas id="shelbyCanvas" class="shelby-canvas"></canvas>
-        <div id="shelbyMessage" class="shelby-message">I love you Shelby</div>
+        <div id="shelbyMessage" class="shelby-message">I love you Shelby!</div>
         <div class="shelby-hearts" id="shelbyHearts"></div>
         <div class="shelby-hint">Tap anywhere to continue</div>
     </div>
