[v2.0.0] Add FCF to earnings chart

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                 <!-- Tab Content: Earnings -->
                 <div id="earnings" class="tab-content">
                     <div class="card">
-                        <h3>Earnings: Actual vs Estimated</h3>
+                        <h3>Earnings & Free Cash Flow</h3>
                         <canvas id="epsChart" width="800" height="350"></canvas>
                     </div>
                     
