--- a/static/index.html
+++ b/static/index.html
@@ -270,6 +270,13 @@
                                     <span id="ttmRevenueChange" class="metric-change"></span>
                                 </div>
                             </div>
+                            <div class="metric" data-trend="neutral" title="Free cash flow over the past 12 months with year-over-year growth.">
+                                <span class="metric-label">Free Cash Flow</span>
+                                <div class="metric-value-container">
+                                    <span id="ttmFCF" class="metric-value"></span>
+                                    <span id="ttmFCFChange" class="metric-change"></span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
