[v2.0.0] Apply Option B layout to Key Metrics

--- a/index.html
+++ b/index.html
@@ -246,36 +246,36 @@
                         </div>
                     </div>
 
-                    <!-- Key Metrics Grid -->
-                    <div class="card metrics-overview metrics-key">
-                        <div class="metrics-grid-compact metrics-row">
-                            <div class="metric" data-trend="neutral" title="What you're paying for each dollar of earnings. Compare to industry peers and historical averages.">
-                                <span class="metric-label">P/E Ratio</span>
-                                <div class="metric-value-container">
-                                    <span id="peRatio" class="metric-value"></span>
-                                    <span class="metric-trend"></span>
+                    <!-- Key Metrics Grid - Option B Style -->
+                    <div class="card metrics-key-simple">
+                        <div class="key-metrics-grid">
+                            <div class="key-metric">
+                                <div class="key-metric-left">
+                                    <span class="key-metric-label">Earnings</span>
+                                    <span id="ttmEarnings" class="key-metric-value"></span>
                                 </div>
+                                <span id="ttmEarningsChange" class="key-metric-change"></span>
                             </div>
-                            <div class="metric" data-trend="neutral" title="Total earnings over the past 12 months with year-over-year growth.">
-                                <span class="metric-label">Earnings</span>
-                                <div class="metric-value-container">
-                                    <span id="ttmEarnings" class="metric-value"></span>
-                                    <span id="ttmEarningsChange" class="metric-change"></span>
+                            <div class="key-metric">
+                                <div class="key-metric-left">
+                                    <span class="key-metric-label">Revenue</span>
+                                    <span id="ttmRevenue" class="key-metric-value"></span>
                                 </div>
+                                <span id="ttmRevenueChange" class="key-metric-change"></span>
                             </div>
-                            <div class="metric" data-trend="neutral" title="Total revenue over the past 12 months with year-over-year growth.">
-                                <span class="metric-label">Revenue</span>
-                                <div class="metric-value-container">
-                                    <span id="ttmRevenue" class="metric-value"></span>
-                                    <span id="ttmRevenueChange" class="metric-change"></span>
+                            <div class="key-metric">
+                                <div class="key-metric-left">
+                                    <span class="key-metric-label">P/E Ratio</span>
+                                    <span id="peRatio" class="key-metric-value"></span>
                                 </div>
+                                <span class="key-metric-change" style="opacity:0;">—</span>
                             </div>
-                            <div class="metric" data-trend="neutral" title="Free cash flow over the past 12 months with year-over-year growth.">
-                                <span class="metric-label">Free Cash Flow</span>
-                                <div class="metric-value-container">
-                                    <span id="ttmFCF" class="metric-value"></span>
-                                    <span id="ttmFCFChange" class="metric-change"></span>
+                            <div class="key-metric">
+                                <div class="key-metric-left">
+                                    <span class="key-metric-label">Free Cash Flow</span>
+                                    <span id="ttmFCF" class="key-metric-value"></span>
                                 </div>
+                                <span id="ttmFCFChange" class="key-metric-change"></span>
                             </div>
                         </div>
                     </div>
