--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
                 <h1>🦞 Stock Research</h1>
                 <span id="version" class="version">v2.0.0</span>
             </div>
-            <button id="searchIconBtn" class="search-icon-btn" title="Search">
-                <svg width="20" height="20" viewBox="0 0 24 24">
-                    <path fill="currentColor" d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zM9.5 14C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/>
-                </svg>
-            </button>
+            <button id="searchIconBtn" class="search-icon-btn" title="Search">🔍</button>
         </header>
         
         <!-- Search Modal -->
