--- a/static/index.html
+++ b/static/index.html
@@ -202,7 +202,7 @@
             </div>
 
             <div id="results" class="hidden">
-                <!-- Header with company name and refresh -->
+                <!-- Header with company name and price -->
                 <div class="card company-header">
                     <div class="company-header-content">
                         <div>
@@ -213,13 +213,6 @@
                             <span id="headerPrice" class="header-price"></span>
                             <span id="headerChange" class="header-change"></span>
                         </div>
-                        <button id="refreshBtn" class="refresh-btn" title="Refresh data">
-                            <span class="refresh-icon">↻</span>
-                            <span class="refresh-text">Refresh</span>
-                            <span class="refresh-spinner hidden">
-                                <div class="spinner-ring"></div>
-                            </span>
-                        </button>
                     </div>
                 </div>
 
